# bipartite

./: .clang-format  CMakeLists.txt  conanfile.txt
inc/: argskimmer.hpp  bipartite.hpp
test/: CMakeLists.txt  argskimmer.cpp  bipartite.cpp  doctest-rapidcheck.hpp  main.cpp
